<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.nwu.ypf.mp_ver3.util.Util" />

        <import type="com.nwu.ypf.mp_ver3.bean.IMusicInfo" />

        <variable
            name="music"
            type="androidx.lifecycle.LiveData&lt;IMusicInfo>" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="18dp"
        android:paddingEnd="12dp"
        android:paddingBottom="18dp">

        <LinearLayout style="@style/Widget.ListItem.MusicDetail">

            <TextView
                android:id="@+id/textView2"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_name" />

            <TextView
                android:id="@+id/name"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{music.musicName}"
                tools:text="啦啦啦啦" />
        </LinearLayout>


        <LinearLayout style="@style/Widget.ListItem.MusicDetail">

            <TextView
                android:id="@+id/textView3"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_singer" />

            <TextView
                android:id="@+id/singer"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{music.artist}"
                tools:text="我是歌手" />
        </LinearLayout>

        <LinearLayout style="@style/Widget.ListItem.MusicDetail">

            <TextView
                android:id="@+id/textView4"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_album" />

            <TextView
                android:id="@+id/album"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{music.albumName}"
                tools:text="专辑专辑专辑专辑专辑专辑专辑专辑专辑" />
        </LinearLayout>

        <LinearLayout style="@style/Widget.ListItem.MusicDetail">

            <TextView
                android:id="@+id/textView6"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_size" />

            <TextView
                android:id="@+id/size"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Util.parseFileSize(music.size)}"
                tools:text="21MB" />
        </LinearLayout>


        <LinearLayout style="@style/Widget.ListItem.MusicDetail">

            <TextView
                android:id="@+id/textView7"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_path" />

            <TextView
                android:id="@+id/path"
                style="@style/Widget.TextView.MusicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{music.file}"
                tools:text="/sdcard/balbala/aaa.mp3" />
        </LinearLayout>
    </LinearLayout>
</layout>